[VARUN] MOD: fixed some bugs
