# app/controllers/api/v1/movies_controller.rb
@@ -11,8 +11,10 @@ module Api
         movies = Movie.all
         movies = movies.where('title ILIKE ?', "%#{params[:search]}%") if params[:search].present?
         movies = movies.where(genre: params[:genre]) if params[:genre].present?
+        movies = movies.where(rating: params[:rating]) if params[:rating].present?
+        movies = movies.where('extract(year from release_date) = ?', params[:release_year]) if params[:release_year].present?
         movies = movies.page(params[:page]).per(10)
-
+      
         render json: {
           movies: ActiveModelSerializers::SerializableResource.new(movies, each_serializer: MovieSerializer),
           meta: {
